force-app/main/default/objects/ucinn_ascendv2__Log__c/ucinn_ascendv2__Log__c.object-meta.xml
<CustomObject>
    <description>An ascend log used for debugging purposes.</description>
    <label>Log</label>
    <nameField>
        <label>Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>