force-app/main/default/objects/ucinn_ascendv2__Log__c/fields/ucinn_ascendv2__Class_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Class_Name__c</fullName>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>