force-app/main/default/objects/ucinn_ascendv2__Log__c/fields/ucinn_ascendv2__Context_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Context_Type__c</fullName>
    <label>Context Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>