force-app/main/default/objects/ucinn_ascendv2__Log__c/fields/ucinn_ascendv2__Message_2__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Message_2__c</fullName>
    <label>Message 2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>