force-app/main/default/objects/ucinn_ascendv2__Log__c/fields/ucinn_ascendv2__Record_URL__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Record_URL__c</fullName>
    <label>Record URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>