force-app/main/default/objects/ucinn_ascendv2__Log__c/fields/ucinn_ascendv2__Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Serial_Number__c</fullName>
    <label>Serial Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>