force-app/main/default/objects/ucinn_ascendv2__Log__c/recordTypes/ucinn_ascendv2__Debug_Log.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Debug_Log</fullName>
    <active>true</active>
    <description>A log for the purpose of debugging</description>
    <label>Debug Log</label>
</RecordType>