force-app/main/default/objects/ucinn_ascendv2__Log__c/recordTypes/ucinn_ascendv2__Error_Log.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Error_Log</fullName>
    <active>true</active>
    <description>A log for the purpose of logging an error.</description>
    <label>Error Log</label>
</RecordType>